# commerce-genesis

./: .gitignore  README.md
AR/: package-lock.json
AR/Webxr-three-react-2/React-Webxr/: cert.pem  key.pem  package-lock.json  package.json  vite.config.js
assets/: banner.avif  key_features.avif  tech_stack.avif  usp-1.avif  usp-2.avif
backend/: .gitignore  pyproject.toml
backend/MyBacke/: db.sqlite3
backend/MyBacke/MyBacke/: settings.py  urls.py
backend/MyBacke/mainApp/: admin.py  models.py  serializers.py  views.py
backend/MyBacke/mainApp/migrations/: 0008_review.py
backend/MyBacke/mainApp/trained_model/: encoder_category_1.joblib  encoder_category_2.joblib  encoder_category_3.joblib
extension/: main.go  manifest.json  popup.html  popup.js
frontend/: bun.lockb  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: Categories.tsx  Footer.tsx  Hero.tsx  RandomProducts.tsx  TopProducts.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: CameraCompo.tsx  CameraComponent.tsx  Chat.tsx  Navbar.tsx  OrdersComponent.tsx  Product.tsx  ProductCompo.tsx  ProductGrid.tsx  SearchBar.tsx  VoiceButton.tsx
frontend/src/data/: cartItems.ts  data.ts  orders.ts  product.ts  reviews.ts  vendor.ts
frontend/src/hooks/: useUserRole.ts
frontend/src/lib/: types.ts  utils.ts
frontend/src/types/: globals.d.ts
gemini-chat/: app.py  pyproject.toml  requirements.txt
stripe-payment/: .env  bun.lockb  bunserver.ts  package-lock.json  package.json  tailwind.config.ts
stripe-payment/src/: App.tsx
(+39 files in other folders)
