[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "google-generativeai>=0.8.4",
    "inference-sdk>=0.12.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "stripe>=11.5.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.1",
]
